--- a/videochat/package.json
+++ b/videochat/package.json
@@ -1,5 +1,5 @@
 {
-  "name": "my-app",
+  "name": "videochat",
   "version": "0.1.0",
   "private": true,
   "dependencies": {
@@ -12,7 +12,7 @@
     "react-dom": "^18.2.0",
     "react-router": "^6.8.1",
     "react-router-dom": "^6.8.1",
-    "react-scripts": "^2.1.3",
+    "react-scripts": "5.0.1",
     "socket.io": "^4.6.0",
     "socket.io-client": "^4.6.0",
     "uuid": "^9.0.0",
