--- a/videochat/package.json
+++ b/videochat/package.json
@@ -6,6 +6,7 @@
     "@testing-library/jest-dom": "^5.16.5",
     "@testing-library/react": "^13.4.0",
     "@testing-library/user-event": "^13.5.0",
+    "aos": "^3.0.0-beta.6",
     "express": "^4.18.2",
     "freeice": "^2.2.2",
     "react": "^18.2.0",
@@ -15,6 +16,7 @@
     "react-scripts": "5.0.1",
     "socket.io": "^4.6.0",
     "socket.io-client": "^4.6.0",
+    "typed.js": "^2.0.12",
     "uuid": "^9.0.0",
     "web-vitals": "^2.1.4"
   },
