--- a/videochat/package.json
+++ b/videochat/package.json
@@ -20,6 +20,7 @@
     "react": "^18.2.0",
     "react-countup": "^6.4.2",
     "react-dom": "^18.2.0",
+    "react-intersection-observer": "^9.4.3",
     "react-router": "^6.8.1",
     "react-router-dom": "^6.8.1",
     "react-scripts": "5.0.1",
