--- a/videochat/package.json
+++ b/videochat/package.json
@@ -24,6 +24,7 @@
     "react-router": "^6.8.1",
     "react-router-dom": "^6.8.1",
     "react-scripts": "5.0.1",
+    "react-visibility-sensor": "^5.1.1",
     "socket.io": "^4.6.0",
     "socket.io-client": "^4.6.0",
     "typed.js": "^2.0.12",
