--- a/videochat/package.json
+++ b/videochat/package.json
@@ -26,6 +26,7 @@
     "react-scripts": "5.0.1",
     "react-scroll": "^1.8.9",
     "react-visibility-sensor": "^5.1.1",
+    "react-webcam": "^7.0.1",
     "socket.io": "^4.6.0",
     "socket.io-client": "^4.6.0",
     "typed.js": "^2.0.12",
