--- a/videochat/package.json
+++ b/videochat/package.json
@@ -21,6 +21,7 @@
     "react-countup": "^6.4.2",
     "react-dom": "^18.2.0",
     "react-intersection-observer": "^9.4.3",
+    "react-modal": "^3.16.1",
     "react-router": "^6.8.1",
     "react-router-dom": "^6.8.1",
     "react-scripts": "5.0.1",
