--- a/videochat/package.json
+++ b/videochat/package.json
@@ -14,6 +14,7 @@
     "express": "^4.18.2",
     "freeice": "^2.2.2",
     "jsonwebtoken": "^9.0.0",
+    "moment": "^2.29.4",
     "mongoose": "^6.10.0",
     "passport": "^0.6.0",
     "passport-jwt": "^4.0.1",
