--- a/videochat/package.json
+++ b/videochat/package.json
@@ -41,7 +41,7 @@
     "start:dev-server": "npx nodemon server.js",
     "start": "react-scripts start",
     "build": "react-scripts build",
-    "test": "react-scripts test",
+    "test": "jest",
     "eject": "react-scripts eject"
   },
   "eslintConfig": {
@@ -63,6 +63,8 @@
     ]
   },
   "devDependencies": {
+    "@types/jest": "^29.5.1",
+    "jest": "^27.5.1",
     "nodemon": "^2.0.20"
   }
 }
