--- a/videochat/package.json
+++ b/videochat/package.json
@@ -15,6 +15,7 @@
     "freeice": "^2.2.2",
     "jsonwebtoken": "^9.0.0",
     "moment": "^2.29.4",
+    "mongodb-memory-server": "^8.12.2",
     "mongoose": "^6.10.0",
     "passport": "^0.6.0",
     "passport-jwt": "^4.0.1",
