--- a/videochat/package.json
+++ b/videochat/package.json
@@ -42,7 +42,7 @@
     "start:dev-server": "npx nodemon server.js",
     "start": "react-scripts start",
     "build": "react-scripts build",
-    "test": "jest",
+    "test": "jest --coverage",
     "eject": "react-scripts eject"
   },
   "eslintConfig": {
