--- a/videochat/.gitignore
+++ b/videochat/.gitignore
@@ -10,6 +10,7 @@
 # testing
 /coverage
 
+
 # production
 /build
 
@@ -18,6 +19,7 @@
 .env.local
 .env.development.local
 .env.test.local
+.env.test
 .env.production.local
 
 npm-debug.log*
