--- a/videochat/package.json
+++ b/videochat/package.json
@@ -66,6 +66,7 @@
   "devDependencies": {
     "@types/jest": "^29.5.1",
     "jest": "^27.5.1",
-    "nodemon": "^2.0.20"
+    "nodemon": "^2.0.20",
+    "supertest": "^6.3.3"
   }
 }
